test/translator/success/file.prez
import "import_test.prez"

int func() {
  return 1;
}

int func(int n) {
  return import_test::add(n, 0);
}
