test/translator/error/import_test/folder/subfolder/file.prez
int func(int n) {
  return n;
}

int func() {
  return 7;
}

